fixed sign-up and login page fixed preview image clipping out

--- a/src/app/modules/user-space/components/item-list.scss
+++ b/src/app/modules/user-space/components/item-list.scss
@@ -139,9 +139,9 @@
 			}
 
 			.preview {
-				height: 100%;
+				width: 100%;
 				max-width: 100%;
-				max-height: 100%;
+				max-height: calc(100% - 2.5rem);
 				object-fit: contain;
 			}
 
